fix: edge case causing horizontal scrollbar
Prevent horizontal scrollbar in case of 100vw grid applied to page with vertical scrollbar.

Fix f851142
Fix #1976

--- a/wowchemy/assets/scss/wowchemy/_root.scss
+++ b/wowchemy/assets/scss/wowchemy/_root.scss
@@ -24,7 +24,7 @@ body {
   padding-top: 0;
   counter-reset: captions;
   // Prevent horizontal scrollbar in case of 100vw grid applied to page with vertical scrollbar.
-  overflow: hidden;
+  overflow-x: hidden;
 }
 @include media-breakpoint-down(md) { /* Match max-width of .nav-bar query. */
   body {
